# fastapi-template

./: Dockerfile  README.md  main.py  pyproject.toml
