[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["kamillle <32205171+kamillle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
